# fourrier-rs

./: Cargo.toml  README.md
prompts/: spec.md
src/: init.rs  main.rs
src/audio/: mod.rs
src/speech/: mod.rs
src/visualization/: mod.rs
