[package]
name = "fourrier-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Audio processing
symphonia = { version = "0.5.3", features = ["mp3", "wav"] }
rustfft = "6.1.0"

# Terminal UI
crossterm = "0.27.0"
ratatui = "0.24.0"

# Speech recognition (Whisper)
whisper-rs = "0.8.0"

# Utility
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
ctor = "0.2"
